networking/destination-rule-three-category.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname-dr
spec:
  host: hostname-svc
  subsets:
  - name: busy
    labels:
      status: busy
  - name: normal
    labels:
      status: normal
  - name: idle
    labels:
      status: idle
---
