networking/virtual-service-percent.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname-vs
spec:
  hosts:
  - "*"
  gateways:
  - hostname-gw
  http:
  - match:
    - uri:
        exact: /host
    route:
    - destination:
        host: hostname-svc
        subset: idle
        port:
          number: 8080
      weight: 35
    - destination:
        host: hostname-svc
        subset: normal
        port:
          number: 8080
      weight: 60
    - destination:
        host: hostname-svc
        subset: busy
        port:
          number: 8080
      weight: 5
---
