networking/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname-vs
spec:
  hosts:
  - "*"
  gateways:
  - hostname-gw
  http:
  - match:
    - uri:
        exact: /host
    route:
    - destination:
        host: hostname-svc
        subset: normal
        port:
          number: 8080
